--- a/pages/Cinematica.html
+++ b/pages/Cinematica.html
@@ -7,8 +7,49 @@
     <title>Physiwizard: Cinemática</title>
     <script src="../scripts.js"></script>
     <link rel="stylesheet" type="text/css" href="../style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"/>
 </head>
 <body>
+  <nav id="Nav1">
+    <ul>
+      <li>
+        <a href="#" class="logo">
+          <img src="../assets/images/magnet.png" alt="" />
+          <span class="nav-logo">PhysiWizard</span>
+        </a>
+      </li>
+      <li>
+        <a href="../index.html" class="a">
+          <i class="fas fa-home"></i>
+          <span class="nav-item">Inicio</span>
+        </a>
+      </li>
+      <li>
+        <a href="LeyCoulomb.html" class="a">
+          <i class="fa-solid fa-car-battery"></i>
+          <span class="nav-item">Ley De Coulomb</span>
+        </a>
+      </li>
+      <li>
+        <a href="CampoElectrico.html" class="a">
+          <i class="fa-solid fa-plug-circle-plus"></i>
+          <span class="nav-item">Campo Electrico</span>
+        </a>
+      </li>
+      <li>
+        <a href="Cinematica.html" class="a active">
+          <i class="fa-solid fa-bolt active"></i>
+          <span class="nav-item active">Cinemática</span>
+        </a>
+      </li>
+      <li>
+        <a href="info.html" class="a">
+          <i class="fa-solid fa-circle-info"></i>
+          <span class="nav-item">Sobre Nosotros</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
   <div class="ttl">
   <h2>Cinemática</h2>
   <p id="opcine">Elige una de las siguientes opciones</p>
@@ -25,8 +66,10 @@
             <label>Tiempo transcurrido (t):</label>
             <input type="number" id="tiempo"><br><br>
             <button class="tpb" type="button" onclick="calcularMCU()">Calcular</button>
+            <button class="tpb" type="button" onclick="mostrarProcedimientoMCU()">Mostrar procedimiento</button>
           </form>
           <p id="resultado"></p>
+          <p id="procedimientoMCU"></p>
     </section>
     <section id="opcion2" class="section">
         <h2>Movimiento Rectilíneo Uniforme (MRU)</h2>
@@ -36,8 +79,10 @@
           <label>Tiempo transcurrido (en segundos):</label>
           <input type="number" id="tiempo2"><br><br>
           <button class="tpb" type="button" onclick="calcularVelocidad()">Calcular velocidad</button>
+          <button class="tpb" type="button" onclick="mostrarProcedimientoMRU()">Mostrar Procedimiento</button>
         </form>
         <p id="resultado2"></p>
+        <p id="procedimientoMRU"></p>
     </section>
     <section id="opcion3" class="section">
         <h2>Ecuación horaria de un MRU</h2>
@@ -49,8 +94,10 @@
           <label>Tiempo (en segundos)(t):</label>
           <input type="number" id="t"><br><br>
           <button class="tpb" type="button" onclick="calcularEcuacionHoraria()">Calcular ecuación</button>
+          <button class="tpb" type="button" onclick="mostrarProcedimientoEcuacionHoraria()">Mostrar procedimiento</button>
         </form>
         <p id="resultado3"></p>
+        <p id="procedimientoEcuacionHoraria"></p>
     </section>
     <!-- <section id="opcion4" class="section">
       <h2>Ecuación de una recta</h2>
