--- a/pages/Equivalencia.html
+++ b/pages/Equivalencia.html
@@ -2,10 +2,52 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="../style.css">
 	<title>Equivalencias</title>
+	<link rel="stylesheet" type="text/css" href="../style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"/>
 </head>
-<body class="FE">
+<body id="ce">
+	<nav id="Nav1">
+		<ul>
+		  <li>
+			<a href="#" class="logo">
+			  <img src="../assets/images/magnet.png" alt="" />
+			  <span class="nav-logo">PhysiWizard</span>
+			</a>
+		  </li>
+		  <li>
+			<a href="../index.html" class="a">
+			  <i class="fas fa-home"></i>
+			  <span class="nav-item">Inicio</span>
+			</a>
+		  </li>
+		  <li>
+			<a href="LeyCoulomb.html" class="a active">
+			  <i class="fa-solid fa-car-battery active"></i>
+			  <span class="nav-item active">Ley De Coulomb</span>
+			</a>
+		  </li>
+		  <li>
+			<a href="CampoElectrico.html" class="a">
+			  <i class="fa-solid fa-plug-circle-plus"></i>
+			  <span class="nav-item">Campo Electrico</span>
+			</a>
+		  </li>
+		  <li>
+			<a href="Cinematica.html" class="a">
+			  <i class="fa-solid fa-bolt"></i>
+			  <span class="nav-item">Cinemática</span>
+			</a>
+		  </li>
+		  <li>
+			<a href="info.html" class="a">
+			  <i class="fa-solid fa-circle-info"></i>
+			  <span class="nav-item">Sobre Nosotros</span>
+			</a>
+		  </li>
+		</ul>
+	  </nav>
+
 	<h1>Equivalencia entre Unidades de Coulomb</h1>
 
 	<label for="valor">Ingrese el valor de la carga:</label>
@@ -51,6 +93,8 @@
 			document.getElementById("result2").innerHTML = valor.toExponential(2) + " " + unidad2;
 			return valor.toFixed(2)
   			}
+
+		
 		
 	</script>
 </body>
