--- a/pages/F.html
+++ b/pages/F.html
@@ -3,9 +3,50 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"/>
     <title>Ley de Coulomb - Solucionador de Problemas</title>
   </head>
   <body>
+    <nav id="Nav1">
+      <ul>
+        <li>
+          <a href="#" class="logo">
+            <img src="../assets/images/magnet.png" alt="" />
+            <span class="nav-logo">PhysiWizard</span>
+          </a>
+        </li>
+        <li>
+          <a href="../index.html" class="a">
+            <i class="fas fa-home"></i>
+            <span class="nav-item">Inicio</span>
+          </a>
+        </li>
+        <li>
+          <a href="#" class="a active">
+            <i class="fa-solid fa-car-battery active"></i>
+            <span class="nav-item active">Ley De Coulomb</span>
+          </a>
+        </li>
+        <li>
+          <a href="CampoElectrico.html" class="a">
+            <i class="fa-solid fa-plug-circle-plus"></i>
+            <span class="nav-item">Campo Electrico</span>
+          </a>
+        </li>
+        <li>
+          <a href="Cinematica.html" class="a">
+            <i class="fa-solid fa-bolt"></i>
+            <span class="nav-item">Cinemática</span>
+          </a>
+        </li>
+        <li>
+          <a href="info.html" class="a">
+            <i class="fa-solid fa-circle-info"></i>
+            <span class="nav-item">Sobre Nosotros</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
     <div  class="FE">
     <h1 class="TFE">Fuerza Eléctrica entre dos cargas</h1>
     <form> <!--Se muestran los campos necesarios para ingresar los datos para resolver el problema-->
@@ -28,8 +69,10 @@
       <label for="d">Distancia entre las cargas (en metros):</label>
       <input type="number" id="d" name="d"><br>
       <input class="tpb" type="button" value="Calcular" onclick="calcularFuerza()">
+      <input class="tpb" type="button" value="Mostrar Procedimiento" onclick="mostrarProcedimientoFuerza()">
     </form>
     <div id="resultado"></div>
+    <div id="procedimientoFuerza"></div>
     <script>
       function calcularFuerza() {
         // Obtener los valores de las cargas y la distancia desde los campos del formulario
@@ -57,6 +100,39 @@
         // Mostrar el resultado en la página
         document.getElementById("resultado").innerHTML = "La fuerza eléctrica entre las cargas es de " + f.toFixed(2) + " Newtons."; //Se redondea a 2 cifras decimales el resultado
       }
+
+      function mostrarProcedimientoFuerza() {
+        // Obtener los valores de las cargas y la distancia desde los campos del formulario
+        var q1 = parseFloat(document.getElementById("q1").value);
+        var unidadQ1 = document.getElementById("unidadQ1").value;
+        var q2 = parseFloat(document.getElementById("q2").value);
+        var unidadQ2 = document.getElementById("unidadQ2").value;
+        var d = parseFloat(document.getElementById("d").value);
+
+        // Convertir los valores de las cargas a Coulombs si es necesario
+        if (unidadQ1 === "mC") {
+          q1 *= 0.001;
+        } else if (unidadQ1 === "uC") {
+          q1 *= 0.000001;
+        }
+        if (unidadQ2 === "mC") {
+          q2 *= 0.001;
+        } else if (unidadQ2 === "uC") {
+          q2 *= 0.000001;
+        }
+
+        // Calcular la fuerza eléctrica utilizando la ley de Coulomb
+        var k = 9e9; // Constante de Coulomb
+        var f = k * q1 * q2 / Math.pow(d, 2); //Fórmula para calcular la fuerza eléctrica
+
+        // Mostrar el procedimiento y el resultado en la página
+        document.getElementById("procedimientoFuerza").innerHTML = `Calculamos la fuerza eléctrica entre las cargas utilizando la ley de Coulomb:` +
+          `<br>F = k * q1 * q2 / d^2` +
+          `<br>F = (${k}) * (${q1}) * (${q2}) / (${d}^2)` +
+          `<br>F = ${f.toFixed(2)} N.`+
+          `<br>La fuerza eléctrica entre las cargas es de ${f.toFixed(2)} Newtons.`;
+      }
+
     </script>
   </div>
   </body>
