--- a/pages/LeyCoulomb.html
+++ b/pages/LeyCoulomb.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8" />
     <title>Ley de Coulomb - Solucionador de Problemas</title>
     <link rel="stylesheet" type="text/css" href="../style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"/>
   </head>
-  <body>
+  <body id="ce">
     <nav id="Nav1">
       <ul>
         <li>
@@ -27,7 +24,7 @@
         <li>
           <a href="#" class="a active">
             <i class="fa-solid fa-car-battery active"></i>
-            <span class="nav-item active">Ley De Coulomb</span>
+            <span class="nav-item">Ley De Coulomb</span>
           </a>
         </li>
         <li>
