--- a/pages/info.html
+++ b/pages/info.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>PhysiWizard</title>
     <link rel="stylesheet" type="text/css" href="../style.css">
-    <!-- Link Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
   </head>
   <body>
@@ -17,9 +16,9 @@
           </a>
         </li>
         <li>
-          <a href="../index.html" class="a active">
-            <i class="fas fa-home active"></i>
-            <span class="nav-item active">Inicio</span>
+          <a href="../index.html" class="a">
+            <i class="fas fa-home"></i>
+            <span class="nav-item">Inicio</span>
           </a>
         </li>
         <li>
@@ -41,9 +40,9 @@
           </a>
         </li>
         <li>
-          <a href="info.html" class="a">
-            <i class="fa-solid fa-circle-info"></i>
-            <span class="nav-item">Sobre Nosotros</span>
+          <a href="info.html" class="a active">
+            <i class="fa-solid fa-circle-info active"></i>
+            <span class="nav-item active">Sobre Nosotros</span>
           </a>
         </li>
       </ul>
